[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "signal", "time"] }
env_logger = "0.11.8"
log = { version = "0.4.28", features = ["max_level_debug"] }
regex = "1"
bytes = "1.10.1"
lazy_static = "1.5.0"
